tests/compile_errors/nullable-list-index.buzz
// Expected `int` index.
test "nullable list index" {
    final idx: int? = null;

    _ = [ 1, 2, 3 ][idx];
}
